--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@shopify/slate-config": "^1.0.0-beta.7",
     "@shopify/theme-a11y": "^1.0.1",
-    "@shopify/theme-cart": "^1.0.0-alpha.7",
+    "@shopify/theme-cart": "^1.0.1",
     "@shopify/theme-currency": "^1.0.0-alpha.7",
     "@shopify/theme-images": "^1.0.0-alpha.7",
     "@shopify/theme-rte": "^1.0.0-alpha.7",
