--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "lodash-es": "^4.17.4",
     "normalize.css": "^7.0.0",
     "pubsub-js": "^1.6.1",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.3",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
