add test script

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "babel-preset-shopify": "^16.2.0",
     "eslint-plugin-shopify": "^19.0.0",
     "stylelint-config-prettier": "^3.0.4",
-    "stylelint-config-shopify": "^5.0.0"
+    "stylelint-config-shopify": "^5.0.0",
+    "puppeteer": "^0.13.0"
   },
   "dependencies": {
     "@shopify/slate-config": "^1.0.0-beta.7",
@@ -48,6 +49,7 @@
     "deploy": "slate-tools build && slate-tools deploy",
     "zip": "slate-tools build && slate-tools zip",
     "lint": "slate-tools lint",
-    "format": "slate-tools format"
+    "format": "slate-tools format",
+    "test": "node test/screenshot/screenshot.js"
   }
 }
