--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@shopify/theme-rte": "^1.0.0-alpha.7",
     "@shopify/theme-sections": "^1.1.0",
     "@shopify/theme-variants": "^1.0.0-alpha.8",
-    "normalize.css": "^7.0.0",
+    "normalize.css": "^7.0.0"
   },
   "scripts": {
     "dev": "slate-tools start --skipPrompts",
