--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@shopify/theme-rte": "^1.0.0-alpha.7",
     "@shopify/theme-sections": "^1.1.0",
     "@shopify/theme-variants": "^1.0.0-alpha.8",
+    "lazysizes": "^4.1.5",
     "normalize.css": "^7.0.0",
     "pubsub-js": "^1.7.0"
   },
