--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@shopify/theme-variants": "^1.0.0-alpha.8",
     "lazysizes": "^4.1.5",
     "normalize.css": "^7.0.0",
-    "pubsub-js": "^1.7.0"
+    "pubsub-js": "^1.7.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "dev": "slate-tools start --skipPrompts",
